added theme support to example

--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,7 @@
 		<title>Library Example</title>
 		<link rel="stylesheet" href="../dist/library.css"/>
 		<link rel="stylesheet" href="example.css"/>
+		<link rel="stylesheet" href="../dist/themes/theme-1/theme-1.css"/>
 	</head>
 	<body>
 		<div id="target"></div>
